add exec pictures to about, add beginnings of contact us

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 events/loadevents.js
+about/bethan.png
+about/charlie.png
+about/hannah.png
+about/harry.png
+about/hassan.png
+about/louis.png
+about/marcus.png
+about/richard.png
+
