improve contact us page, add grey boxes to text, update exec photos

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 events/loadevents.js
-about/bethan.png
-about/charlie.png
-about/hannah.png
-about/harry.png
-about/hassan.png
-about/louis.png
-about/marcus.png
-about/richard.png
+about/socialsec.png
+about/treasurer.png
+about/co-pres1.png
+about/marketing.png
+about/co-pres2.png
+about/itofficer.png
+about/fundraising.png
+about/secretary.png
 
